--- a/company/internal/en/companyINT-en.html
+++ b/company/internal/en/companyINT-en.html
@@ -12,7 +12,7 @@
 		<meta name="author" content="Health Canada">
 		<meta property="dcterms.creator" content="Government of Canada, Health Canada">
 		<meta property="dcterms.issued" title="W3CDTF" content="2019-01-01">
-		<meta property="dcterms.modified" title="W3CDTF" content="2025-05-16">
+		<meta property="dcterms.modified" title="W3CDTF" content="2025-05-27">
 		<meta property="dcterms.language" title="ISO639-2/T" content="eng">
 		
 			<meta name='description' content="Regulatory Enrolment Process Forms"/>
@@ -173,7 +173,7 @@
 			<script>
 				var defPreFooter = document.getElementById("def-preFooter");
 				defPreFooter.outerHTML = wet.builder.preFooter({
-					"dateModified": "2025-05-16",
+					"dateModified": "2025-05-27",
 				"cdnEnv": "prod",
 					"showShare": false
 				});
@@ -251,5 +251,5 @@
 		</script>
     <!--Start add custom scripts here-->
     <script src="./assets/lib/xml2json.js"></script>
-	<link rel="modulepreload" href="chunk-E3HMSHZ2.js"><script src="polyfills-75CVY6KQ.js" type="module"></script><script src="main-UWYPZ6JK.js" type="module"></script></body>
+	<link rel="modulepreload" href="chunk-H237IBN2.js"><script src="polyfills-75CVY6KQ.js" type="module"></script><script src="main-SD4PWMSN.js" type="module"></script></body>
 </html>
