--- a/certificate2025/internal/fr/formulaire-certificat-protection-supplementaire-internal.html
+++ b/certificate2025/internal/fr/formulaire-certificat-protection-supplementaire-internal.html
@@ -12,7 +12,7 @@
 		<meta name="author" content="Santé Canada">
 		<meta property="dcterms.creator" content="Gouvernement du Canada, Santé Canada">
 		<meta property="dcterms.issued" title="W3CDTF" content="2023-06-26">
-		<meta property="dcterms.modified" title="W3CDTF" content="2025-06-10">
+		<meta property="dcterms.modified" title="W3CDTF" content="2025-07-10">
 		<meta property="dcterms.language" title="ISO639-2/T" content="fra">
 		
 		<meta name="description" content="Formulaire de la demande de certificat de protection supplémentaire (CPS)">
@@ -171,7 +171,7 @@
 			<script>
 				var defPreFooter = document.getElementById("def-preFooter");
 				defPreFooter.outerHTML = wet.builder.preFooter({
-					"dateModified": "2025-06-10",
+					"dateModified": "2025-07-10",
 					"cdnEnv": "prod",
 					"showShare": false
 				});
@@ -249,5 +249,5 @@
 		</script>
     <!--Start add custom scripts here-->
     <script src="./assets/lib/xml2json.js"></script>
-	<link rel="modulepreload" href="chunk-4CE2JC2T.js"><script src="polyfills-75CVY6KQ.js" type="module"></script><script src="main-CX2ILJH6.js" type="module"></script></body>
+	<link rel="modulepreload" href="chunk-6EPBVMXH.js"><script src="polyfills-75CVY6KQ.js" type="module"></script><script src="main-HVCQXSV6.js" type="module"></script></body>
 </html>
