--- a/versionHistory/historique_révisions.html
+++ b/versionHistory/historique_révisions.html
@@ -11,7 +11,7 @@
 		<meta http-equiv="content-security-policy" content="script-src 'self' 'unsafe-inline' www.canada.ca; img-src 'self' www.canada.ca; font-src 'self' www.canada.ca maxcdn.bootstrapcdn.com fonts.gstatic.com; style-src 'self' www.canada.ca maxcdn.bootstrapcdn.com 'unsafe-inline'; default-src 'self' www.canada.ca; ">
 		<meta name="author" content="Santé Canada"/>
 		<meta property="dcterms.creator" content="Gouvernement du Canada, Santé Canada"/>
-		<meta property="dcterms.modified" title="W3CDTF" content="2025-05-01">
+		<meta property="dcterms.modified" title="W3CDTF" content="2025-07-28">
 		<meta property="dcterms.language" title="ISO639-2/T" content="fra"/>
 		<!-- build:metaData-fr.html -->
 		<!-- Meta data-->
@@ -53,7 +53,7 @@
 					"title": "Santé Canada",
 					"href": "https://www.canada.ca/fr/sante-canada.html"
 				}, {
-					"title": "Processus d’inscription réglementaire (PIR) - Canada.ca",
+					"title": "Processus d’inscription réglementaire (PIR)",
 					"href": "https://www.canada.ca/fr/sante-canada/services/medicaments-produits-sante/medicaments/demandes-presentations/lignes-directrices/processus-inscription-reglementaire.html"
 				}], 
 				"cdnEnv": "prod"
@@ -68,7 +68,32 @@
 			
 
 			
-			<h3>Publication du 6 juin 2025</h3>
+			<h3>Publication du 10 septembre 2025</h3>
+			
+				<table class="table table-bordered">
+					<thead>
+						<tr>
+							<th scope="col">Modèle</th>
+							<th scope="col">Modification</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td class="col-md-3">Le modèle de transaction réglementaire (TR)<br>Version 5.1.0<br><br><br>Ensemble de feuilles de style*</td>
+							<td class="col-md-9">
+								<ul>
+									<li>Lorsque le type d’activité réglementaire « Niveau 3 - Déclaration de changements » est sélectionné, le champ du « Numéro de contrôle » devient 000000 et le champ est désactivé</li>
+									<li>Mise à jour des définitions de la description de la transaction de réglementation pour « Procès-verbal de la réunion » et « Demande de réunion préalable à la présentation »</li>
+									<li>Mise à jour de la bulle d’information pour « Numéro de contrôle »</li>
+									<li>Mise à jour de la question de tiers et de la bulle d'information dans section A. Information sur la compagnie</li>
+									<li>Résolution de la « date de fin » qui revenait à la « date de début » lors du chargement du fichier TR existant pour les types de AR : RPEAR-C, RPEAR-VC, RPPV-C, RPPV-VC, RAPB<br><br><br></li>
+									<li>*Nouvelle feuille de style TR pour correspondre aux modifications apportées à ce modèle</li>
+								</ul>
+							</td>
+						</tr>
+					</tbody>
+				</table>
+			<h3>Publication du 3 juin 2025</h3>
 			
 				<table class="table table-bordered">
 					<thead>
@@ -432,7 +457,7 @@
 			<script>
 				var defPreFooter = document.getElementById("def-preFooter");
 				defPreFooter.outerHTML = wet.builder.preFooter({
-					"dateModified": "2025-05-01",
+					"dateModified": "2025-07-28",
 					"cdnEnv": "prod",
 					"showShare": false
 				});
