--- a/master-file/en/master-file-form.html
+++ b/master-file/en/master-file-form.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--[if lt IE 9]><html class="no-js lt-ie9" lang="en" dir="ltr"><![endif]-->
-<!--[if gt IE 8]><!--><html class="no-js" lang="en" dir="ltr" data-critters-container><!--<![endif]-->
+<!--[if gt IE 8]><!--><html class="no-js" lang="en" dir="ltr" data-beasties-container><!--<![endif]-->
 	<head>
 		<meta charset="utf-8">
 		<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
@@ -12,7 +12,7 @@
 		<meta name="author" content="Health Canada">
 		<meta property="dcterms.creator" content="Government of Canada, Health Canada">
 		<meta property="dcterms.issued" title="W3CDTF" content="2023-06-26">
-		<meta property="dcterms.modified" title="W3CDTF" content="2024-10-02">
+		<meta property="dcterms.modified" title="W3CDTF" content="2025-08-28">
 		<meta property="dcterms.language" title="ISO639-2/T" content="eng">
 		
 			<meta name='description' content="Master File Forms"/>
@@ -47,11 +47,10 @@
 		<!-- cssIncludes -->
 		<script>
 			document.write(wet.builder.refTop({
-				"cdnEnv": "dev"
+				"cdnEnv": "prod"
 			}));
 		</script>
-	<style>@-webkit-keyframes fa-spin{0%{-webkit-transform:rotate(0deg);transform:rotate(0)}to{-webkit-transform:rotate(359deg);transform:rotate(359deg)}}
-</style><link rel="stylesheet" href="styles-3KQKW7R4.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-3KQKW7R4.css"></noscript><link rel="modulepreload" href="chunk-HY2C4NKM.js"></head>
+	<style>@-webkit-keyframes fa-spin{0%{-webkit-transform:rotate(0deg);transform:rotate(0)}to{-webkit-transform:rotate(359deg);transform:rotate(359deg)}}</style><link rel="stylesheet" href="styles-BPACRPQL.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-BPACRPQL.css"></noscript></head>
 	<body vocab="https://schema.org/" typeof="WebPage">
 		<div id="def-top">
 			<!-- Write closure fall-back static file -->
@@ -155,7 +154,7 @@
     "href": "https://www.canada.ca/en/health-canada/services/drugs-health-products/drug-products/applications-submissions.html"
 }
 				],
-				"cdnEnv": "dev"
+				"cdnEnv": "prod"
 			});
 		</script>
 		<main property="mainContentOfPage" typeof="WebPageElement" class="container">
@@ -181,8 +180,9 @@
 			<script>
 				var defPreFooter = document.getElementById("def-preFooter");
 				defPreFooter.outerHTML = wet.builder.preFooter({
-					"dateModified": "2024-10-02",
-					"cdnEnv": "dev"
+					"dateModified": "2025-08-28",
+				"cdnEnv": "prod",
+					"showShare": false
 				});
 			</script>
 		</main>
@@ -247,16 +247,16 @@
 		<script>
 			var defFooter = document.getElementById("def-footer");
 			defFooter.outerHTML = wet.builder.footer({
-				"cdnEnv": "dev"
+				"cdnEnv": "prod"
 			});
 		</script>
 		<!-- Write closure template -->
 		<script>
 			document.write(wet.builder.refFooter({
-				"cdnEnv": "dev"
+				"cdnEnv": "prod"
 			}));
 		</script>
     <!--Start add custom scripts here-->
     <script src="./assets/lib/xml2json.js"></script>
-	<script src="polyfills-75CVY6KQ.js" type="module"></script><script src="main-522XCC5U.js" type="module"></script></body>
+	<link rel="modulepreload" href="chunk-JDKTHM4Q.js"><script src="polyfills-TSBCVX73.js" type="module"></script><script src="main-PJIXCIH5.js" type="module"></script></body>
 </html>
